--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "endroid/qr-code": "^1.7",
     "setasign/fpdi-fpdf": "1.6.1",
     "xthiago/pdf-version-converter": "dev-master",
-    "phpoffice/phpspreadsheet": "^1.6"
+    "phpoffice/phpspreadsheet": "^1.6",
+    "phpseclib/mcrypt_compat": "^1.0"
   },
   "require-dev": {
     "behat/behat": "2.*@stable",
