OE-8993 changed travis to use php7 for checks

--- a/protected/tests/docker-compose.yml
+++ b/protected/tests/docker-compose.yml
@@ -12,7 +12,7 @@ version: '3.4'
 
 services:
   phpunit:
-    image: appertaopeneyes/ci:latest
+    image: appertaopeneyes/ci:php7
     environment:
       TESTS_TO_RUN: "PHPUNIT"
     secrets:
