--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "pdepend/pdepend": "2.2.4",
     "phpmd/phpmd": "@stable",
     "sebastian/phpcpd": "*",
-    "squizlabs/php_codesniffer": "3.*"
+    "squizlabs/php_codesniffer": "3.*",
+    "fzaninotto/faker": "^1.9"
   },
   "config": {
     "bin-dir": "bin"
