Converted query_plot_container view to a standalone widget that encapsulates all plots for all selected variables. Moved plot selector to new widget. Moved script registration for Plotly and oePlotly to new widget.

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "setasign/fpdi-fpdf": "1.6.1",
     "xthiago/pdf-version-converter": "dev-master",
     "phpoffice/phpspreadsheet": "^1.6",
-    "phpseclib/mcrypt_compat": "^1.0"
+    "phpseclib/mcrypt_compat": "^1.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "behat/behat": "2.*@stable",
