--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,18 @@ services:
 
 jobs:
   include:
-    - # PR builds - behat
-      if: type = pull_request
-      script: docker-compose -f protected/tests/docker-compose.yml run --use-aliases -e BUILD_BRANCH=$TRAVIS_PULL_REQUEST_BRANCH behat
-      name: "Behat"
+    # - # PR builds - behat
+    #   if: type = pull_request
+    #   script: docker-compose -f protected/tests/docker-compose.yml run --use-aliases -e BUILD_BRANCH=$TRAVIS_PULL_REQUEST_BRANCH behat
+    #   name: "Behat"
     - # PR builds - phpunit
       if: type = pull_request
       script: docker-compose -f protected/tests/docker-compose.yml run --use-aliases -e BUILD_BRANCH=$TRAVIS_PULL_REQUEST_BRANCH phpunit
       name: "PHPUnit"
-    - # Branch builds - behat
-      if: type = push AND (branch in (master, develop) OR branch =~ /^release\/v\S*$/ OR branch =~ /^bugfix\/\S*$/)
-      script: docker-compose -f protected/tests/docker-compose.yml run --use-aliases -e BUILD_BRANCH=$TRAVIS_BRANCH behat
-      name: "Behat (branch)"
+    # - # Branch builds - behat
+    #   if: type = push AND (branch in (master, develop) OR branch =~ /^release\/v\S*$/ OR branch =~ /^bugfix\/\S*$/)
+    #   script: docker-compose -f protected/tests/docker-compose.yml run --use-aliases -e BUILD_BRANCH=$TRAVIS_BRANCH behat
+    #   name: "Behat (branch)"
     - # Branch builds - phpunit
       if: type = push AND (branch in (master, develop) OR branch =~ /^release\/v\S*$/ OR branch =~ /^bugfix\/\S*$/)
       script: docker-compose -f protected/tests/docker-compose.yml run --use-aliases -e BUILD_BRANCH=$TRAVIS_BRANCH phpunit
