don't use demo data in test builds

--- a/protected/tests/docker-compose.yml
+++ b/protected/tests/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       ENABLE_CRON: "FALSE"
       WAIT_HOSTS_TIMEOUT: "120"
       WAIT_SLEEP_INTERVAL: "2"
+      USE_DEMO_DATA: "FALSE"
       DATABASE_NAME: "phpunitdb"
     secrets:
       - source: SSH_PRIVATE_KEY
@@ -59,6 +60,7 @@ services:
       ENABLE_CRON: "FALSE"
       WAIT_HOSTS_TIMEOUT: "120"
       WAIT_SLEEP_INTERVAL: "2"
+      USE_DEMO_DATA: "FALSE"
       DATABASE_NAME: "behatdb"
     secrets:
       - source: SSH_PRIVATE_KEY
