--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sortablejs": "^1.8.4",
     "tinymce": "^4.8.2",
     "autosize": "^4.0.0",
-    "jspdf": "1.5.2"
+    "jspdf": "1.5.2",
+    "video.js": "^7.7.5"
   }
 }
