--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ services:
   - docker
   - xvfb
 
+ before_script:
+      - echo 'Europe/London' | sudo tee /etc/timezone
+      - sudo dpkg-reconfigure --frontend noninteractive tzdata
+      - sudo ntpdate ntp.ubuntu.com
+
 jobs:
   include:
     # - # PR builds - behat
