--- a/protected/tests/docker-compose.yml
+++ b/protected/tests/docker-compose.yml
@@ -12,7 +12,7 @@ version: '3.4'
 
 services:
   phpunit:
-    image: appertaopeneyes/ci:php7
+    image: appertaopeneyes/ci:latest
     environment:
       TZ: "Europe/London"
       TESTS_TO_RUN: "PHPUNIT"
