--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,9 @@
     "symfony/polyfill-ctype": "@stable"
   },
   "require-dev": {
-    "behat/behat": "2.*@stable",
-    "behat/mink": "1.7.*@stable",
-    "behat/yii-extension": "1.*@stable",
-    "behat/mink-extension": "1.3.*@stable",
-    "behat/mink-goutte-driver": "1.2.*@stable",
-    "behat/mink-selenium2-driver": "1.3.*@stable",
-    "fabpot/goutte": "1.0.*@stable",
-    "sensiolabs/behat-page-object-extension": "1.*@stable",
-    "phpunit/phpunit": "5.7.27",
-    "phpunit/phpunit-selenium": "1.3.*",
-    "phpunit/dbunit": "1.2.*",
-    "phpunit/php-invoker": "1.1.*",
+    "phpunit/phpunit": "6.4.*@stable",
+    "phpunit/php-invoker": "1.1.4",
+    "phpunit/dbunit": "@stable",
     "phpunit/phpunit-story": "*",
     "phploc/phploc": "*",
     "pdepend/pdepend": "2.2.4",
