OE-9566 OE-8111 - Replace WKHTML with Pupeteer (#4293)
* Added puphpteer dependencies.
Initial addition of code using PuPHPteer (untested).

* Added binary files from composer dependency changes to .gitignore.

* Initial implementation of puphpeteer for image and PDF generation in place of wkhtmltopdf and wkhtmltoimage.
NOTE: Footer currently is not displaying correctly for PDF files. Will need to revise margins.

* Fixed issue where lightning viewer image height would be truncated if the page was longer than the default viewport height (600px).

* Added simple unit tests for WKHtmlToPDF and WKHtmlToImage classes.
REworked test.php config so that the asset manager and application base paths are correctly set to the protected folder when running tests in PHPUnit.

* Reworked pdf_footer template file and footer generation process to support Puppeteer.

* Now closing pages and browsers opened in puppeteer once we have the data we need.
This should remove any extra processing overhead used by instances of Chromium.
Removed unnecessary CSS styling in PDF footer.

* HTML print renders are no longer saved to the filesystem before being processed by puppeteer.
EyeDraw canvas renders will now appear correctly in Lightning Viewer images (ie. without caching images).
Fixed undefined page number in docref in correspondence PDFs. Still need to fix missing barcodes.

* Fixed margin issues with FP10/WP10 printing.

* Barcodes for printouts are now rendered as SVGs rather than pure HTML.
This works around the issues puppeteer has with styling within footers.

* Puppeteer is now wrapped in a Yii application component configured through configuration files.
The idea here is that an application component is a singleton as the application object itself is a singleton and should (theoretically) reduce the overhead of navigating pages using Puppeteer's chromium browser in parallel by using a shared browser with differing pages.
Fixed issue that prevented lig

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ node_modules
 /docs/public/assets/core
 /bin/phpunit
 /bin/webunit
+/bin/semver
+/bin/update-versions
 /docs/public
 /protected/assets/img/fieldImages/*
 /assets/
