--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "openeyes/openeyes",
+  "license": "AGPL-3.0-only",
   "description": "Electronic Patient Record system for use in Ophthalmology clinics",
   "require": {
     "yiisoft/yii": "1.1.22",
@@ -10,6 +11,9 @@
     "xthiago/pdf-version-converter": "dev-master",
     "phpoffice/phpspreadsheet": "^1.6",
     "phpseclib/mcrypt_compat": "^1.0",
+    "symfony/process": "4.4.*",
+    "nesk/rialto": "1.3.*",
+    "nesk/puphpeteer": "1.6.*",
     "symfony/polyfill-ctype": "@stable"
   },
   "require-dev": {
@@ -20,7 +24,7 @@
     "phploc/phploc": "*",
     "pdepend/pdepend": "2.2.4",
     "phpmd/phpmd": "@stable",
-    "sebastian/phpcpd": "*",
+    "sebastian/phpcpd": "3.0.*",
     "squizlabs/php_codesniffer": "3.*",
     "fzaninotto/faker": "^1.9"
   },
