travis build changes (use private image) (#4731)
* travis build changes (use private image)

* fix bad migration (db name had been hard coded)

--- a/protected/tests/docker-compose.yml
+++ b/protected/tests/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "--disable-log-bin"
 
   phpunit:
-    image: appertaopeneyes/web:php7
+    image: ${OEWEB_IMAGE_NAME:-appertaopeneyes/web:php7}
     environment:
       OE_MODE: "TEST"
       TESTS_TO_RUN: "PHPUNIT"
