--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,13 @@
     "symfony/polyfill-ctype": "@stable"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.4.*@stable",
-    "phpunit/php-invoker": "1.1.4",
-    "phpunit/dbunit": "@stable",
+    "phpunit/phpunit": "7.5.20",
+    "phpunit/php-invoker": "3.0.2",
+    "phpunit/php-timer": "2.1.2",
     "phpunit/phpunit-story": "*",
     "phploc/phploc": "*",
     "pdepend/pdepend": "2.2.4",
     "phpmd/phpmd": "@stable",
-    "sebastian/phpcpd": "3.0.*",
     "squizlabs/php_codesniffer": "3.*",
     "fzaninotto/faker": "^1.9"
   },
