--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-jsdoc": "^2.3.0",
     "gzip-js": "0.3.2",
-    "load-grunt-tasks": "~3.5.0"
+    "load-grunt-tasks": "~3.5.0",
+    "shellcheck": "*"
   },
   "dependencies": {
     "@nesk/puphpeteer": "^1.6.0",
