--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ bin/yiic
 
 build/logs
 protected/widgets/views/IndexSearch_Examination.php
+protected/scripts/sample_db.sql
+protected/scripts/sample_db.zip
