fix incorrectly creating folder during backup

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@ bin/yiic
 
 build/logs
 protected/widgets/views/IndexSearch_Examination.php
+protected/scripts/sample_db.sql
+protected/scripts/sample_db.zip
