--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "phpmd/phpmd": "@stable",
     "sebastian/phpcpd": "3.0.*",
     "squizlabs/php_codesniffer": "3.*",
-    "fzaninotto/faker": "^1.9"
+    "fzaninotto/faker": "^1.9",
+    "friendsofphp/php-cs-fixer": "*"
   },
   "config": {
     "bin-dir": "bin"
